Fix code inspection warnings (sampler)